--- a/5-loops/loops-practise.html
+++ b/5-loops/loops-practise.html
@@ -10,10 +10,16 @@
 <body>
     <i>Loop Pracrise</i>
     <script>
-       let n= prompt("How many times you want to return");
-        for (let i=0; i <n; i++) {
-            console.log(i);
-        }
+    //    let n= prompt("How many times you want to return");
+    //     for (let i=0; i <n; i++) {
+    //         console.log(i);
+    //     }
+    let sum=0;
+    let n = parseInt(prompt("How many times you want to return"));
+    for (let i = 0; i <= n; i++) {
+        sum += i+1;
+        console.log("The sum of first is" ,  n ,"The value of I is " , i , "The sum of natural numbers is " , sum);
+    }
     </script>
 </body>
 
