--- a/6-Functions/2nd-practise.html
+++ b/6-Functions/2nd-practise.html
@@ -9,7 +9,9 @@
 
 <body>
     <script>
-
+        const Add=(m,n)=>{
+            return m+n;
+        }
         //Average Function
         function Average(x, y) {
             console.log("done");
