--- a/6-Functions/functions-practise.html
+++ b/6-Functions/functions-practise.html
@@ -17,7 +17,7 @@
     <script>
 
         //Using 
-        let str= prompt("Enter Name for Vouwals Check");
+        let str = prompt("Enter Name for Vouwals Check");
         let count = 0;
         function Vouwals(str) {
             for (const index of str) {
@@ -37,30 +37,29 @@
             }
             console.log(count);
         }
-Vouwals(str);
-        // Now Same fundtions using Arrow
-        // let run = 0;
-        // const countvouwals = (str) => {
-        //     for (const index of str) {
-        //         if (index === "a" ||
-        //             index === "e" ||
-        //             index === "i" ||
-        //             index === "o" ||
-        //             index === "u" ||
-        //             index === "A" ||
-        //             index === "E" ||
-        //             index === "I" ||
-        //             index === "O" ||
-        //             index === "U"
-        //         ) {
-        //             run++;
-        //         }
-        //     }
-        //     console.log(run);
-
-            
-        // }
-
+        Vouwals(str);
+        /*
+        let str = prompt("Enter Name for Vouwals Check");
+        let count = 0;
+        const Vouwals = (str) => {
+            for (const index of str) {
+                if (index === "a" ||
+                    index === "e" ||
+                    index === "i" ||
+                    index === "o" ||
+                    index === "u" ||
+                    index === "A" ||
+                    index === "E" ||
+                    index === "I" ||
+                    index === "O" ||
+                    index === "U"
+                ) {
+                    count++;
+                }
+            }
+            console.log(count);
+        }
+        Vouwals(str);*/
         // const array = ["1", "2", "3"];
 
         // array.forEach((index) => console.log(index * index));
