map filter reduce

--- a/7-Array/methods/map.html
+++ b/7-Array/methods/map.html
@@ -23,7 +23,7 @@
         // })
         // console.log(newarr2);
         //---------Map-----------
-        //new array 
+        //new array  $ Apply on every element
         let nums = [10, 20, 30];
         let newarrbymap = nums.map((val) => {
             return val * val;
@@ -43,7 +43,7 @@
         // n of input & give one output like sum avg subtract
         const arrreduce = [1, 2, 3, 4];
         const output = arrreduce.reduce((pre, curr) => {
-            return pre >= curr? pre:curr;
+            return pre >= curr ? pre : curr;
         })
         console.log(output);
 
